# MCPForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  RELEASE.md  VALIDATION_REPORT.md  forge.toml.example  install.sh
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml  security-audit.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs  telemetry.rs
crates/forge-cli/src/commands/: add.rs  audit.rs  check.rs  init.rs  logs.rs  ls.rs  mod.rs  remove.rs  report.rs  restart.rs  secret.rs  start.rs  status.rs  stop.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: audit.rs  injection.rs  lib.rs  mcp.rs
crates/forge-core/src/config/: mod.rs  policy.rs  secret.rs  validation.rs
crates/forge-core/src/protocol/: mod.rs
crates/forge-core/src/supervisor/: mod.rs
crates/forge-core/tests/: audit_queries.rs  config_parsing.rs  injection_detection.rs  secret_resolution.rs  supervisor.rs
crates/forge-mock-mcp/: Cargo.toml  main.rs
crates/forge-proxy/: Cargo.toml
crates/forge-proxy/src/: lib.rs  sse.rs
crates/forge-proxy/tests/: security_hardening.rs
scripts/: release-tag.sh
tests/: config_parsing.rs  secret_resolution.rs
