[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-cli",
    "crates/forge-proxy",
    "crates/forge-mock-mcp",
]

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "homebrew"]
tap = "devesrawat/mcp-forge"
targets = [
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
allow-dirty = ["ci"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.6", features = ["derive"] }
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "process", "signal", "time", "sync", "io-util", "fs", "net"] }
tokio-util = "0.7"
axum = "0.8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["timeout", "limit"] }
hyper = "1"
shell-words = "1.1"
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
governor = "0.10"
dashmap = "6.1"
globset = "0.4"
dialoguer = "0.12"
rpassword = "7"
futures = "0.3"
rmcp = { version = "1.3", default-features = false, features = [
    "client",
    "transport-child-process",
] }
tempfile = "3"
proptest = "1"
which = "6"

