[package]
name = "forge-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
keyring = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
shell-words = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "process", "signal", "time", "sync", "io-util", "fs", "net"] }
tokio-util = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
hex = { workspace = true }
globset = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
