[package]
name = "forge-mock-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "forge-mock-mcp"
path = "main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["io-std", "macros", "rt"]
