[package]
name = "forge-proxy"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"

[features]
default = []

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
forge-core = { path = "../forge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }
governor = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
